--- a/src/components/pages/project/project.module.css
+++ b/src/components/pages/project/project.module.css
@@ -73,6 +73,8 @@
     padding: 10px;
     gap: 10px;
     border-radius: 60px;
+    opacity: 0;
+    transition: background-color .5s ease;
 }
 .filterBox .filterCondition{
     padding: 4px 10px;
@@ -139,6 +141,8 @@
     background-size: 1100px 700px ;
     box-shadow: 0 0 18px rgba(0, 0, 0, 0.2);
     transition: all 0.4s;
+    position: relative;
+    transition: background-color .5s ease, color .5s ease, box-shadow .5s ease;
 }
 .frontSide:hover {
   box-shadow: 0 0 18px 3px rgba(0, 0, 0, 0.5);
@@ -149,7 +153,7 @@
     object-fit: cover;
     opacity: 0;
     transition: opacity 0.5s ease;
-    pointer-events: none;
+    position: absolute;
 }
 .frontSide video.active{
     opacity: 1;
@@ -162,12 +166,14 @@
     height: 23%;
     border-top: 1px solid #555;
     padding: 10px 30px;
+    transition: background-color .5s ease;
 }
 .frontSide .titleBox p{
     color: #222;
     font-size: 24px;
     font-weight: 800;
     font-family: 'Aldrich';
+    transition: color .5s ease;
 }
 .frontSide .titleBox .cardNotice{
     position: absolute;
@@ -178,6 +184,7 @@
     transition: .3s ease;
     color: #222;
     font-size: 18px;
+    transition: color .5s ease;
 }
 .frontSide:hover .titleBox .cardNotice{
     opacity: 1;
@@ -194,21 +201,23 @@
 }
 .backSide {
     transform: rotateY(180deg);
-    background: #fafafa;
+    background-color: #fafafa;
     padding: 20px;
     box-shadow: 0 0 18px rgba(0, 0, 0, 0.2);
+    transition: background-color .5s ease, color .5s ease;
 }
 .backSide .titleBox p:first-child{
-    color: #222;
     font-size: 36px;
     font-weight: 800;
     font-family: 'Aldrich';
 }
 .backSide .titleBox p{
+    color: #222;
     font-size: 16px;
     font-weight: 400;
     font-family:'Noto Sans KR';
     margin-bottom: 20px;
+    transition: color .5s ease;
 }
 .backSide .languageTags{
     display: flex;
@@ -219,9 +228,9 @@
     padding: 4px 8px;
     background-color: #444;
     color: #fff;
-    transition: background-color .3s ease;
+    transition: background-color .5s ease, color .5s ease;
     user-select: none;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
 }
 .languageTags .tag:hover{
     background-color: #222;
@@ -241,11 +250,28 @@
     line-height: 50px;
     border: #222 1px solid;
     border-radius: 5px;
-    transition: background-color .5s ease, color .5s ease, border .5s ease;
+    transition: color .5s ease, border .5s ease;
+    position: relative;
+    overflow: hidden;
+}
+.backSide .linkBox a::before {
+    content: '';
+    top: -100%;
+    left: 20%;
+    position: absolute;
+    width: 300px;    
+    height: 200px;   
+    background-color: #222; 
+    transform: translateX(-100%) rotate(45deg);
+    transition: transform .5s ease, background-color .5s ease;
+    z-index: -1;
+    pointer-events: none;
 }
 .backSide .linkBox a:hover{
-    background-color: #222;
     color: #fff;
+}
+.backSide .linkBox a:hover::before {
+    transform: translateX(-20%) rotate(45deg); 
 }
 .backSide .returnFrontSide{
     text-align: end;
@@ -267,6 +293,7 @@
     width: 100%;
     height: 100%;
     background: url(/source/img/icons/ico_turn.png) no-repeat center/cover;
+    transition: filter .5s ease;
 }
 
 /* 다크 모드 */
@@ -282,7 +309,60 @@
 :global(body.darkMode) .boardContainer::-webkit-scrollbar-thumb {
   background: rgba(255, 255, 255);
 }
-
+:global(body.darkMode) .boardContainer .filterBox{
+    background-color: #eee;
+}
+:global(body.darkMode) .filterBox .filterCondition{
+    background-color: #eee;
+    color: #222;
+}
+:global(body.darkMode) .filterBox .filterCondition:hover{
+    background-color: #ccc;
+}
+:global(body.darkMode) .filterBox .filterCondition.active{
+    background-color: #222;
+    color: #eee;
+}
+:global(body.darkMode) .frontSide{
+    box-shadow: 0 0 18px rgba(0, 0, 0, 0.8);
+}
+:global(body.darkMode) .frontSide:hover {
+    box-shadow: 0 0 18px 3px rgba(0, 0, 0, 1);
+}
+:global(body.darkMode) .frontSide .titleBox{
+    background-color: #333;
+}
+:global(body.darkMode) .frontSide .titleBox p{
+    color: #eee;
+}
+:global(body.darkMode) .frontSide .titleBox .cardNotice{
+    color: #fff;
+}
+:global(body.darkMode) .backSide{
+    background-color: #333;
+}
+:global(body.darkMode) .backSide p {
+    color: #eee;
+}
+:global(body.darkMode) .backSide .tag{
+    background-color: #fff;
+    color: #222;
+}
+:global(body.darkMode) .backSide .tag:hover{
+    background-color: #ddd;
+}
+:global(body.darkMode) .backSide .linkBox a{
+    color: #eee;
+}
+:global(body.darkMode) .backSide .linkBox a::before{
+    background-color: #fff;
+}
+:global(body.darkMode) .backSide .linkBox a:hover{
+    color: #222;
+}
+:global(body.darkMode) .backSide button .ico{
+    filter: invert(1);
+}
 @media screen and (min-width: 730px) and (max-width: 1350px){
     .title{
         font-size: 80px;
@@ -304,6 +384,9 @@
     }
     .title{
         font-size: 50px;
+    }
+    .projectBoard{
+        padding: 40px 0;
     }
     .projectCard{
         width: 100%;
